--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@tippyjs/react": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
